--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=reto-tecnico
 
 #Conexion Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/buses_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.url=jdbc:mysql://localhost:3306/${buses_db}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${usuario}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate Config
